# echo-slack-bot-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  mise.toml  release-plz.toml
.github/workflows/: release-container.yaml  release-please.yaml  release-plz-release-pr.yaml  release.yml
src/: main.rs
