[package]
name = "echo-slack-bot-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
futures-util = { version = "0.3", features = ["sink"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.27" }
